# Camera_robot_calibration

./: CMakeLists.txt  README.md  background_subtraction  background_subtraction.cpp  calibration_data_capture_image_pcd.py  get_tf_transform.py  robot_poses.txt  w1.py
matlab_scripts/: .rs_extrinsic_cal.m.swp  compute_global_calibration_with_robot.m  extrinsic_cal.m  main.m  multi_extrinsic_cal.m  radius_cal.m  rs_check_calibration.m  rs_extrinsic_cal.m
